# BlockDeviceMonitor

./: .gitignore  CMakeLists.txt  README.md  rules-table  rules-table.md
client/: event_pb2.py  main.py
proto/: block_device_event.proto  client_message.proto  rule.proto  server_message.proto
protos/: event.proto
src/: block_device.cpp  block_device.hpp  block_device_event.cpp  block_device_event.hpp  block_device_monitor.cpp  block_device_monitor.hpp  client.cpp  client.hpp  client_accepter.cpp  client_accepter.hpp  client_handler.cpp  client_handler.hpp  event.p.cpp  event.p.hpp  event.pb.cpp  event.pb.hpp  event.proto  exceptions.cpp  exceptions.hpp  main.cpp  netlink.cpp  netlink.hpp  partition_table.cpp  partition_table.hpp  program_arguments.cpp  program_arguments.hpp  rules_manager.cpp  rules_manager.hpp  rules_utils.hpp  udev_event.cpp  udev_event.hpp  udevevent.cpp  udevevent.hpp  utils.hpp
src/block_device/: block_device.cpp  block_device.hpp  block_device_event.cpp  block_device_event.hpp  netlink.cpp  netlink.hpp  partition_table.cpp  partition_table.hpp  udev_event.cpp  udev_event.hpp
src/client/: client.cpp  client.hpp  client_accepter.cpp  client_accepter.hpp  client_handler.cpp  client_handler.hpp  rules_manager.cpp  rules_manager.hpp  rules_utils.cpp  rules_utils.hpp
src/common/: auto_fd.cpp  auto_fd.hpp  auto_lock.cpp  auto_lock.hpp  auto_mount.cpp  auto_mount.hpp  buffer.cpp  buffer.hpp  os_utils.cpp  os_utils.hpp  server_socket.cpp  server_socket.hpp  socket.cpp  socket.hpp  string_utils.cpp  string_utils.hpp  temp_folder.cpp  temp_folder.hpp  unix.hpp  utils.cpp  utils.hpp
src/common/autos/: auto_fd.cpp  auto_fd.hpp  auto_lock.cpp  (+7 more)
src/readers/: socket_reader.cpp  socket_reader.hpp
src/writers/: console_writer.cpp  socket_writer.cpp  socket_writer.hpp  writer.hpp
(+14 files in other folders)
